# UCU_autotests

./: .gitmodules  Dockerfile  README.md  README_old.md  entrypoint.sh  setup.sh  system_check.sh
acs/: generate_words_testcases.py  generic_test.py  integral.sh  perf_io_tests.py  words.sh
acs/1brc/: README.md  test_1brc.py
acs/integral/: func_1.m4  integral.sh  test_integral.py  test_integral_parallel.py  test_integral_queue.py
acs/integral_old/: func_3.m4
acs/old/integral_old/: compare.sh  func_2.m4  general_config.m4  test
acs/old/words_count_old/: words.sh
acs/old/words_count_old/words_count_results/: test_1
acs/old/words_count_old/words_count_testcases/: test_1.m4
acs/openmpi/: Dockerfile  README.md  docker-compose.yml  run_test.sh
acs/openmpi/config_files/: config.cfg  start_file.txt
acs/openmpi/scripts/: entrypoint_master.sh  entrypoint_worker.sh  exec_app.sh
acs/words_count/: general_config.m4  test.sh  test_words.py  words.sh
acs/words_count/testing_dirs/: generate_test3.py  out.py  to_bin.py
acs/words_count/testing_dirs/test2/: syn.md  txt.nottxt
acs/words_count/testing_dirs/test3/: word521.txt
acs/words_count/words_count_testcases/: test_0.m4
acs/words_count_results/: test_1  test_70
acs/words_count_testcases/test_0/: archive_0.7z  archive_0.tar.xz
acs/words_count_testcases/test_1/: archive.7z  archive.tar.xz
acs/words_count_testcases/test_60/: archive.7z  archive.tar.xz
bash/: bash_task1_test.sh
bash/task0/: run_tests_cvt_img.sh
bash/task1/: bash_task1_test.sh
bash/task2/: README.md  test_my_inc_bkp.sh
bash/task_0/: README.md  my_cvt_img.sh  run_tests_cvt_img.sh
c_strings_auto_testing/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  compile.sh
c_strings_auto_testing/cmake/: CMakeLists.txt  README.md
c_strings_auto_testing/cmake/defaults/: CompilerWarnings.cmake  PVSStudio.cmake  Sanitizers.cmake
c_strings_auto_testing/google_tests/: main.cpp
c_strings_auto_testing/google_tests/Tests/: tests.cpp
c_strings_auto_testing/include/: README.md
c_strings_auto_testing/src/: README.md  main.c
general/: compile.sh  general_settings.sh  randomize.py  run_prog_with_time_bound.sh
os/bash/task0/: test_cvt_img.sh
os/bash/task3/: README.md  shellmake_test.sh
os/bash/task3/resources/: file1.cpp  file1.h  file2.cpp  file2.h  main_file.cpp  shmakefile
os/mycat/: CMakeLists.txt  README.md  book1.txt  etalon_test2.txt  etalon_test5.txt  hexified_book1.txt  hexified_book10.txt  hexified_book11.txt  hexified_book12.txt  hexified_book13.txt  hexified_book2.txt  hexified_book3.txt  hexified_book4.txt  hexified_book5.txt  hexified_book6.txt  hexified_book7.txt  hexified_book8.txt  hexified_book9.txt  runner  runner_adv_main.cpp  test_mycat_2b.sh
os/myshell/: README.md  check.py  generate_output.py  test_1.msh  test_2.msh
poc/asm_autotests/: README.md  makefile
poc/asm_autotests/10_mean_64_uint/src/: test.c
poc/asm_autotests/11_minmax_32_int/src/: test.c
poc/asm_autotests/12_minmax_64_int/src/: test.c
poc/asm_autotests/13_prime_32_uint/: makefile
poc/asm_autotests/13_prime_32_uint/src/: test.c
poc/asm_autotests/14_prime_64_uint/src/: test.c
poc/asm_autotests/15_sum_digits_32_uint/: makefile
poc/asm_autotests/15_sum_digits_32_uint/src/: test.c
poc/asm_autotests/1_sort_32_uint/src/: main.c
poc/asm_autotests/2_sort_32_int/src/: main.c
poc/asm_autotests/3_sort_64_uint/src/: main.c
poc/asm_autotests/4_sort_64_int/src/: main.c
poc/asm_autotests/5_axb_32_int/: makefile
poc/asm_autotests/5_axb_32_int/src/: test.c
poc/asm_autotests/6_axb_check_32_char/src/: test.c
poc/asm_autotests/7_axb_32_float/src/: test.c
poc/asm_autotests/8_axb_64_float/src/: test.c
poc/asm_autotests/9_mean_32_uint/src/: test.c
poc/asm_autotests/test_arrays/: makefile
poc/asm_autotests/test_arrays/10_mean_64_uint/: am_64uint.lst  hm_64uint.lst  input_64uint.lst
poc/asm_autotests/test_arrays/11_minmax_32int/: input_32int.lst  mean_32int.lst  var_32int.lst
poc/asm_autotests/test_arrays/12_minmax_64int/: input_64int.lst  var_64int.lst
poc/asm_autotests/test_arrays/13_prime_32uint/: prime.lst
poc/asm_autotests/test_arrays/14_prime_64uint/: input_64uint.lst  prime.lst
poc/asm_autotests/test_arrays/15_sum_digits_32uint/: input_32uint.lst  output_sum.lst
poc/asm_autotests/test_arrays/1_sort_32_uint/: array_1000el_uint32_t.txt  array_100el_uint32_t.txt  array_10el_uint32_t.txt  array_sorted_1000el_uint32_t.txt  array_sorted_100el_uint32_t.txt  array_sorted_10el_uint32_t.txt
poc/asm_autotests/test_arrays/2_sort_32_int/: array_1000el_int32_t.txt  array_100el_int32_t.txt  array_10el_int32_t.txt  array_sorted_1000el_int32_t.txt  array_sorted_100el_int32_t.txt  array_sorted_10el_int32_t.txt
poc/asm_autotests/test_arrays/3_sort_64_uint/: array_1000el_uint64_t.txt  array_100el_uint64_t.txt  array_10el_uint64_t.txt  array_sorted_1000el_uint64_t.txt  array_sorted_100el_uint64_t.txt  array_sorted_10el_uint64_t.txt
poc/asm_autotests/test_arrays/4_sort_64_int/: array_1000el_int64_t.txt  array_100el_int64_t.txt  array_10el_int64_t.txt  array_sorted_1000el_int64_t.txt  array_sorted_100el_int64_t.txt  array_sorted_10el_int64_t.txt
poc/asm_autotests/test_arrays/7_8_axb_float/: array_1000el_a.lst  array_1000el_b.lst  array_1000el_x.lst
poc/asm_autotests/test_arrays/9_mean_32_uint/: am_32uint.lst  input_32uint.lst
poc/cmake_autotests/: readme.md  test_cmakemake.py
(+9 files in other folders)
